Refactoring source files into src folder, with corresponding exports mapping in package.json.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "Vue 3 components, JS utilities and helpers.",
   "main": "index.js",
+  "exports": {
+    "./": "./src/"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
