--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "peerDependencies": {
     "autosize": "^4.0.2",
     "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.5.0",
     "flatpickr": "^4.6.9",
     "lodash": "^4.17.20",
     "luxon": "^1.25.0",
