--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "flatpickr": "^4.6.9",
     "lodash": "^4.17.20",
     "luxon": "^1.25.0",
-    "vue": "^3.0.5"
+    "vue": "^3.0.5",
+    "uuid": "^3.4.0"
   }
 }
